# square_array

./: CMakeLists.txt  TODO.txt  atomic_sum.h  cuda_compat.h  cuda_utils.cu  cuda_utils.h  debug.h  joseph3d_back.cpp  joseph3d_back.cu  joseph3d_back_worker.h  joseph3d_fwd.cpp  joseph3d_fwd.cu  joseph3d_fwd_worker.h  main.cpp  main.cu  main_pp.cpp  parallelproj.cu  parallelproj.h  square_op.h  utils.h
cmake/: parallelprojConfig.cmake.in
include/: cuda_utils.h  parallelproj.h  utils.h
src/: cuda_utils.cu  joseph3d_back.cpp  joseph3d_back.cu  joseph3d_fwd.cpp  joseph3d_fwd.cu  joseph3d_fwd_worker.h  parallelproj_pybind.cpp
tests/: expected_fwd_vals.txt  file_utils.h  file_utils.tpp  test.py  test_nontof_fwd_back.cpp  test_nontof_fwd_back.cu  test_nontof_fwd_back.py  test_nontof_fwd_back_cuda.cu  vend.txt  vstart.txt
